crates/selene-vector/tests/snapshots/vector_snapshot_corpus__corpus_snapshots_match@empty-snapshot-roundtrip.snap
---
source: crates/selene-vector/tests/vector_snapshot_corpus.rs
expression: snapshot.to_string()
---
==== CONFIG ====
slug="empty-snapshot-roundtrip"
description="Empty graph GRPH/VECS roundtrip."
dim=4 m=16 ef_construction=200 ef_search=50 metric=Cosine quantization_enabled=false quantization_rescore=false
==== GRAPH ====
nodes=0 dim=4 entry_point=none max_layer=0
node_head=[]
==== SECTIONS ====
GRPH(len=35, blake3_8=5362bd6044138b2a, dim=4, nodes=0, entry_point=none, max_layer=0, head=[])
VECS(len=26, blake3_8=51b7092bac88772c, dim=4, nodes=0, components=0, head=[])
QUNT(empty)
==== RESULT ====
roundtrip.recovered_matches_source=true
