crates/selene-vector/tests/snapshots/vector_snapshot_corpus__corpus_snapshots_match@error-dimension-mismatch.snap
---
source: crates/selene-vector/tests/vector_snapshot_corpus.rs
expression: snapshot.to_string()
---
==== CONFIG ====
slug="error-dimension-mismatch"
description="Synthetic DimensionMismatch shape."
dim=4 m=16 ef_construction=200 ef_search=50 metric=Cosine quantization_enabled=false quantization_rescore=false
==== GRAPH ====
nodes=0 dim=4 entry_point=none max_layer=0
node_head=[]
==== SECTIONS ====
<none>
==== RESULT ====
error.kind=DimensionMismatch
error.induction_kind=synthetic
error.rendered=DimensionMismatch{expected=4, observed=3}
