crates/selene-vector/tests/snapshots/vector_snapshot_corpus__corpus_snapshots_match@error-duplicate-node-id.snap
---
source: crates/selene-vector/tests/vector_snapshot_corpus.rs
expression: snapshot.to_string()
---
==== CONFIG ====
slug="error-duplicate-node-id"
description="DuplicateNodeId from re-inserting an existing node."
dim=4 m=16 ef_construction=200 ef_search=50 metric=Cosine quantization_enabled=false quantization_rescore=false
==== GRAPH ====
nodes=1 dim=4 entry_point=idx0 max_layer=0
node_head=[n1:L0:[0]]
==== SECTIONS ====
<none>
==== RESULT ====
error.kind=DuplicateNodeId
error.induction_kind=api
error.rendered=DuplicateNodeId{node_id=n1}
