crates/selene-vector/tests/snapshots/vector_snapshot_corpus__corpus_snapshots_match@error-invalid-config.snap
---
source: crates/selene-vector/tests/vector_snapshot_corpus.rs
expression: snapshot.to_string()
---
==== CONFIG ====
slug="error-invalid-config"
description="InvalidConfig from zero-dimensional HNSW config."
dim=4 m=16 ef_construction=200 ef_search=50 metric=Cosine quantization_enabled=false quantization_rescore=false
neighbor_select="default"
==== GRAPH ====
nodes=0 dim=4 entry_point=none max_layer=0
node_head=[]
==== SECTIONS ====
<none>
==== RESULT ====
error.kind=InvalidConfig
error.induction_kind=api
error.rendered=InvalidConfig{reason="dim must be greater than zero"}
