crates/selene-vector/tests/snapshots/vector_snapshot_corpus__corpus_snapshots_match@error-invalid-node-id.snap
---
source: crates/selene-vector/tests/vector_snapshot_corpus.rs
expression: snapshot.to_string()
---
==== CONFIG ====
slug="error-invalid-node-id"
description="InvalidNodeId from NodeId::TOMBSTONE."
dim=4 m=16 ef_construction=200 ef_search=50 metric=Cosine quantization_enabled=false quantization_rescore=false
==== GRAPH ====
nodes=0 dim=4 entry_point=none max_layer=0
node_head=[]
==== SECTIONS ====
<none>
==== RESULT ====
error.kind=InvalidNodeId
error.induction_kind=api
error.rendered=InvalidNodeId{node_id=n0, reason="NodeId::TOMBSTONE cannot be added to an HNSW index"}
